# sonic-ringworlds-s2

./: CMakeLists.txt  README.md  cmake-generate.sh
assets/: output.smf  output.smf.c
assets/bossfrost/: bossfrost.smf  bossfrost.smf.c  bossfrost.smf.textures  output.smf  output.smf.textures
include/: menu.h  mic3d.h  yaul.h
include/core/: audio.c  audio.h  callback.h  cd.c  cd.h  colour.c  colour.h  controller.c  controller.h  cpu.c  cpu.h  dbgio-internal.h  dbgio.c  dbgio.h  gamewindow.c  gamewindow.h  preprocessor.h  ram.c  ram.h  scu.c  scu.h  threads.c  threads.h  timer.c  timer.h  title.h  types.h  window.c  window.h
include/gamemath/: angle.h  fix16_vector.c  fix16_vector.h  int_vector.c  int_vector.h  mat33.c  mat33.h  mat43.c  mat43.h  math3d.c  math3d.h  matrix.c  matrix.h  vector.c  vector.h
include/gfx/: clip.c  clip.h  light_processor.c  light_processor.h  mesh.c  mesh.h  primitive.c  primitive.h  texture.c  texture.h  vram.c  vram.h
include/gfx/render/: displaylist.c  displaylist.h  drawstate.h  primitive.h  render.c  render.h  (+2 more)
include/libmenu/: menu.c  menu.h  scroll_menu.c  scroll_menu.h
include/mic3d/: camera.c  camera.h  config.h  gst.c  gst.h  internal.h  light_processor.c  light_processor.h  mesh.c  mesh.h  mic3d.c  render.c  render.h  render_mesh.c  render_mesh.h  sizes.h  sort.c  sort.h  state.c  state.h  texture.c  texture.h  types.h  workarea.h
samples/: dbgio-menu(not finished).c  vdp1-drawing.c  vdp1-mic3d.c  vdp2-back-screen.c  vdp2-nbg0(not finished).c
src/: lazyfoo_opengl_sample.txt  main.c
src/backend/: cd_loader.c  ssv.c  ssv.h
src/collision/: collision_detection.c
src/meshes/: mesh_sphere.c
(+55 files in other folders)
